deployments/gcloud/gke/service-patch.yaml
# The control plane's Service, served through container-native load balancing with the BackendConfig above.
apiVersion: v1
kind: Service
metadata:
  name: oya-control-plane
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"default": "oya-control-plane"}'
