deployments/gcloud/gke/ingress.yaml
# HTTPS for DOMAIN on a reserved global IP, with a Google-managed certificate
# and plain HTTP redirected. DOMAIN and ADDRESS are replaced by deploy.sh.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oya-control-plane
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.global-static-ip-name: ADDRESS
    networking.gke.io/managed-certificates: oya-control-plane
    networking.gke.io/v1beta1.FrontendConfig: oya-control-plane
spec:
  defaultBackend:
    service: { name: oya-control-plane, port: { name: http } }
